--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div [class]="themeClass">
+
+  <button mat-raised-button color="primary">Save</button>
+  <router-outlet></router-outlet>
+
+</div>
+
+
