--- a/src/styles-variables.scss
+++ b/src/styles-variables.scss
@@ -18,5 +18,5 @@ $grid-breakpoints: (
 
 $link-hover-decoration: none;    // remove underline from button links
 
-$link-color: #3f51b5;            // set link color based on the used material theme
+$link-color: #3f51b5;            // set link color based on the used angular-material theme
 $link-hover-color: currentColor;
