--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,24 @@
    the angular.json file. It enables us to override any
    Sass variable used by the Bootstrap styles definitions.
 */
+
 @import "styles-variables";
 
 @import '~bootstrap/scss/bootstrap-reboot';
 @import '~bootstrap/scss/bootstrap-grid';
+@import './reset';
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/theming';
+
+@include mat-core();
+
+@import 'themes/default-theme.scss';
+@import 'themes/black-theme.scss';
+
+.default-theme {
+  @include angular-material-theme($default-theme);
+}
+
+.dark-theme {
+  @include angular-material-theme($black-theme);
+}
