--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div [class]="themeClass">
+<div [class]="themeClass" >
 
+  <app-toolbar title="Titulo"></app-toolbar>
   <button mat-raised-button color="primary">Save</button>
   <router-outlet></router-outlet>
 
